se añadio la opcion para eliminar el evento

--- a/MiGestorEventos/eventos/templates/editar_evento.html
+++ b/MiGestorEventos/eventos/templates/editar_evento.html
@@ -6,4 +6,9 @@
     <button type="submit">Guardar cambios</button>
 </form>
 
+<form method="post" action="{% url 'eliminar_evento' pk=evento.pk %}">
+    {% csrf_token %}
+    <button type="submit" onclick="return confirm('¿Estás seguro de que quieres eliminar este evento?');">Eliminar evento</button>
+</form>
+
 <a href="{% url 'eventos_lista' %}">Volver a la lista de eventos</a>
