--- a/MiGestorEventos/eventos/templates/eventos_lista.html
+++ b/MiGestorEventos/eventos/templates/eventos_lista.html
@@ -4,19 +4,25 @@
     <title>Eventos</title>
 </head>
 <body>
-    <h1>Eventos y Organizadores</h1>
+    <h1>Eventos</h1>
     {% if eventos %}
         <ul>
             {% for evento in eventos %}
                 <li>
                     <strong>{{ evento.nombre }}</strong> - {{ evento.fecha }}<br>
                     Descripción: {{ evento.descripcion }}<br>
-                    Organizador: {{ evento.organizador.nombre }}
+                    Organizador: {{ evento.organizador.nombre }} <br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="{% url 'editar_evento' pk=evento.pk %}">Editar</a>
                 </li>
             {% endfor %}
         </ul>
     {% else %}
         <p>No hay eventos disponibles.</p>
     {% endif %}
+
+    <br>
+    <a href="{% url 'crear_evento' %}">Crear nuevo evento</a>
+
 </body>
 </html>
